# multiext

./: .gitignore  LICENSE  README.md  documentation.patch  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  index.rst
docs/api/: multiext.manipulation.rst  multiext.parser.rst  multiext.path.rst  multiext.validation.rst
