[metadata]
# Name, version, author, etc. are now defined in pyproject.toml
# However, you can still override or add specific metadata here if needed.
# For example, long_description_content_type is often placed here.
long_description_content_type = text/markdown

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.10


[options.packages.find]
where = .
include = multiext*
exclude = tests*

[options.entry_points]
# If your package provides any command-line scripts, define them here.
# For example:
# console_scripts =
#     my-script = multiext.cli:main

[options.extras_require]
# Define optional dependencies, e.g., for development or specific features.

[flake8]
# Optional: if you use flake8 for linting, you can configure it here.
max-line-length = 88
extend-ignore = E203, W503 # E203: whitespace before ':', W503: line break before binary operator (compatible with black)

[tool:pytest]
# Optional: pytest configuration
testpaths = tests
addopts = --cov=multiext --cov-report=term-missing
